--- a/index.html
+++ b/index.html
@@ -3,12 +3,49 @@
 	<title>W1-A1</title>
 	<link href='https://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>
+	
 </head>
 <body>
+	<h1>CSS<br>OFF</h1>
+	<p>Volume 3-September 2013</p>
+	<p>FEATURE</p>
+	<h2>POSITIONING<br>RELATIVES</h2>
+	<p>In 1958, English pictorial photographer Henry Peach Robinson created the world’s first photomontage by combining five different negatives to make one complete print of a young girl on her deathbed. “Fading Away”—Robinson’s first and most famous composite photo—depicts a young girl dying of consumption and was controversial when it was exhibited, with many believing it was not a suitable subject for photography.</p>
+	<h3>Box Model</h3>
+	<p>The Barbie doll was invented in 1959 by Ruth Handler (co-founder of Mattel), whose own daughter was called Barbara. Barbie was introduced to the world at the American Toy Fair in New York City. Barbie's job was teenage fashion doll. The full name of the first doll was Barbie Millicent Roberts, from Willows, Wisconsin.</p>
+	<h3>Staying Afloat</h3>
+	<p>Lobsterman John Aldridge fell into the shark-infested water of Long Island while his crewmates were asleep. He was kept afloat for more than 12 hours by his rubber boots, which he used as flotation devices. The coast guard rescued him 43 miles south of Montauk where he fell off his vessel.</p>
+	<h3>LIST STYLES: BULLETS. A ROUND-UP OF POPULAR AMMUNITION</h3>
+	<ul>
+		<li>.223<br>REMINGTON<br>69gr BTHP</li>
+		<li>.308<br>WINCHESTER<br>168gr BTHP<li>
+		<li>7.62×39mm<br>RUSSIAN<br>154gr JSP<li>
+		<li>7.62<br>THUMPER<br>220gr RN<li>
+		<li>7.62<br>THUMPER<br>240gr BTHP<li>
+	</ul>
+	<h2>DISPLAYING (FAMOUS) BLOCKS</h2>
+	<p>Abbey Road is a thoroughfare located in the borough of Camden and the City of Westminster in London, running roughly northwest to southeast through St. John’s Wood, near Lord’s Cricket Ground. It is part of the B507. This road is best known for the Abbey Road Studios and the 1969 album, Abbey Road, by The Beatles.</p>
+	<p>Photo:
+	<a href="goo.gl/h44dc9">goo.gl/h44dc9</a>
+	</p>
+	<h2>BORDER BOTTOM LINE</h2>
+	<h4>Awful immigration laws from around the world.</h4>
+	<p><strong>Italy</strong> penalizes illegal immigrants with a fine of €5,000-10,000 and allows immigration officials to detain them for up to 6 months. •  <strong>Switzerland</strong> immediately deports all convicted criminals from other countries and potentially even their family members. •  <strong>Australia</strong> detains all non-citizens without a valid visa.•  <strong>Japan</strong> is allowed to pay $3,000 to each unemployed Latin Americn immigrant of Japanese descent and $2,000 to each of that unemployed worker’s family members to return to their country of origin.• The <strong>United Arab Emirates</strong> prohibits foreigners from engaging in any sort of labor union-like activity, resulting in harsh living conditions, 80-hour work weeks, back-breaking manual labor, and below-minimum-wage pay.</p>
+	<h3>TRANSFORMERS REVENGE OF THE FALLEN</h3>
+	<p>A noisy, underplotted, and overlong special effects extravaganza that lacks a human touch.</p>
+	<p>Rotten Tomato<br>Rating</p>
+	<p>20%</p>
+	<p>WORLD PREMIERE<br>DEN HAAG THEATRE<br>THE NETHERLANDS<br>JUNE 23, 2011</p>
+	<p>On the night of Aug 8, 1975, a line of people frantically piled sandbags atop Henan Province's <strong>Banqiao Dam</strong>while being battered by the worst storm ever recorded in the region. They were in a race wirth the rapidly rising Ru River to save the dam and the millions of people that lay sleeping downstream.<br> It was a race they were about to lose</p>
+	<p>Just after 1:00 am, the sky cleared and stars emerged from behind the storm clouds. There was an eerie calm as someone yelled, "The water level is going down! The flood is retreating!"</p>
+	<p>There was little chance to enjoy that calm. One survivor recalled that a few seconds later it "sounded like the sky was collapsing and the earth was cracking." The equivalent of 280,000 Olympic-sized swimming pools burt through the crumbling dam, taking with it entire towns and as many as 171,000 lives.</p>
+
+	<footer>2013 CSSOff, Volume 3 <address><strong>Route Gregory</strong>, Building 31<br>01630 Prevessin-Moens, France<br>+41 22 767 61 11</address></footer>
 	<form>
-		<input type
+
+
 	</form>
 </body>
 </html>
