--- a/index.html
+++ b/index.html
@@ -41,11 +41,25 @@
 	<p>On the night of Aug 8, 1975, a line of people frantically piled sandbags atop Henan Province's <strong>Banqiao Dam</strong>while being battered by the worst storm ever recorded in the region. They were in a race wirth the rapidly rising Ru River to save the dam and the millions of people that lay sleeping downstream.<br> It was a race they were about to lose</p>
 	<p>Just after 1:00 am, the sky cleared and stars emerged from behind the storm clouds. There was an eerie calm as someone yelled, "The water level is going down! The flood is retreating!"</p>
 	<p>There was little chance to enjoy that calm. One survivor recalled that a few seconds later it "sounded like the sky was collapsing and the earth was cracking." The equivalent of 280,000 Olympic-sized swimming pools burt through the crumbling dam, taking with it entire towns and as many as 171,000 lives.</p>
-
-	<footer>2013 CSSOff, Volume 3 <address><strong>Route Gregory</strong>, Building 31<br>01630 Prevessin-Moens, France<br>+41 22 767 61 11</address></footer>
+	<br>
 	<form>
-
-
+		<label>First Name:<br>
+		<input type="text" name="first-name"></label><br>
+		<label>Last Name:<br>
+		<input type="text" name="last-name"><label><br>
+		<label>Email Address:<br>
+		<input type="text" name="email"><label><br>
+		<label>Date of Birth:<br>
+		<input type="text" name="dob"><label><br>
+		<label>Phone Number:<br>
+		<input type="text" name="phone-number"><label><br>
+		<label>Home Address:<br>
+		<input type="text" name="home-address"><label><br>
+		<input type="checkbox" name="permission" value="permission" checked>Yes, I would like to be added to your email list.</input>
+		<br>
+  		<input type="submit" value="Submit">
 	</form>
+	<br><br>
+	<footer>2013 CSSOff, Volume 3 <address><strong>Route Gregory</strong>, Building 31<br>01630 Prevessin-Moens, France<br>+41 22 767 61 11</address></footer>
 </body>
 </html>
