--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 		<li>7.62<br>THUMPER<br>240gr BTHP</li>
 	</ul>
 	<h2>DISPLAYING (FAMOUS) BLOCKS</h2>
+	<img src="imgs/abbey-road-trimmed.jpg" alt="abbey-road-trimmed" height="635" width="960">
 	<p>Abbey Road is a thoroughfare located in the borough of Camden and the City of Westminster in London, running roughly northwest to southeast through St. John’s Wood, near Lord’s Cricket Ground. It is part of the B507. This road is best known for the Abbey Road Studios and the 1969 album, Abbey Road, by The Beatles.</p>
 	<p>Photo:
 	<a href="goo.gl/h44dc9">goo.gl/h44dc9</a>
