finished font colors

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<p id="review">A noisy, underplotted, and overlong special effects extravaganza that lacks a human touch.</p>
 		<p>Rotten Tomato<br>Rating</p>
 		<p>20%</p>
-		<p>WORLD PREMIERE<br>DEN HAAG THEATRE<br>THE NETHERLANDS<br>JUNE 23, 2011</p>
+		<p><span class="fade">WORLD PREMIERE</span><br>DEN HAAG THEATRE<br><span class="fade">THE NETHERLANDS</span><br>JUNE 23, 2011</p>
 	</section>
 	<section>
 		<img src="imgs/overflow.png" alt="The word overflow floating in water" width="1058" height="407">
