applied font sizes

--- a/index.html
+++ b/index.html
@@ -66,15 +66,20 @@
 	</section>
 	<section>
 		<img src="imgs/transformers.png" alt="photo of the Transformers DVD" width="298" height="365">
-		<h3>TRANSFORMERS<br>REVENGE OF THE FALLEN</h3>
-		<p id="review">A noisy, underplotted, and overlong special effects extravaganza that lacks a human touch.</p>
-		<p>Rotten Tomato<br>Rating</p>
+		<h3>TRANSFORMERS<br><span class="size-change">REVENGE OF THE FALLEN</span></h3>
+		<p>A noisy, underplotted, and overlong special effects extravaganza that lacks a human touch.</p>
+		<p>ROTTEN TOMATO<br><span class="size-change">RATING</span></p>
 		<p>20%</p>
-		<p><span class="fade">WORLD PREMIERE</span><br>DEN HAAG THEATRE<br><span class="fade">THE NETHERLANDS</span><br>JUNE 23, 2011</p>
+		<ul>
+			<li>WORLD PREMIERE</li>
+			<li>DEN HAAG THEATRE</li>
+			<li>THE NETHERLANDS</li>
+			<li>JUNE 23, 2011</li>
+		</ul>
 	</section>
 	<section>
 		<img src="imgs/overflow.png" alt="The word overflow floating in water" width="1058" height="407">
-		<p>On the night of Aug 8, 1975, a line of people frantically piled sandbags atop Henan Province's <strong>Banqiao Dam</strong> while being battered by the worst storm ever recorded in the region. They were in a race wirth the rapidly rising Ru River to save the dam and the millions of people that lay sleeping downstream.<br> It was a race they were about to lose</p>
+		<p>On the night of Aug 8, 1975, a line of people frantically piled sandbags atop Henan Province's <strong>Banqiao Dam</strong> while being battered by the worst storm ever recorded in the region. They were in a race with the rapidly rising Ru River to save the dam and the millions of people that lay sleeping downstream.<br> It was a race they were about to lose</p>
 		<p>Just after 1:00 am, the sky cleared and stars emerged from behind the storm clouds. There was an eerie calm as someone yelled, "The water level is going down! The flood is retreating!"</p>
 		<p>There was little chance to enjoy that calm. One survivor recalled that a few seconds later it "sounded like the sky was collapsing and the earth was cracking." The equivalent of 280,000 Olympic-sized swimming pools burst through the crumbling dam, taking with it entire towns and as many as 171,000 lives.</p>
 	</section>
@@ -91,6 +96,6 @@
   		<input type="submit" value="Submit">
 	</form>
 
-	<footer><strong>2013 CSSOff,</strong> Volume 3 <address><strong>Route Gregory</strong>, Building 31<br>01630 Pr&#233;vessin-Mo&#235;ns, France<br>+41 22 767 61 11</address></footer>
+	<footer><strong class="color-change">2013 CSSOff,</strong> Volume 3 <address><strong>Route Gregory</strong>, Building 31<br>01630 Pr&#233;vessin-Mo&#235;ns, France<br>+41 22 767 61 11</address></footer>
 </body>
 </html>
