done applying font sizes

--- a/index.html
+++ b/index.html
@@ -43,17 +43,39 @@
 		<img src="imgs/bullets.png" alt="Photos of assorted bullets" height="276" width="717">
 		</figure>
 		<ul>
-			<li>.223<br>REMINGTON<br>69gr BTHP</li>
-			<li>.308<br>WINCHESTER<br>168gr BTHP</li>
-			<li>7.62x39mm<br>RUSSIAN<br>154gr JSP</li>
-			<li>7.62<br>THUMPER<br>220gr RN</li>
-			<li>7.62<br>THUMPER<br>240gr BTHP</li>
+			<li>
+				<ul>
+						<li>.223</li>
+						<li>REMINGTON</li>
+						<li>69gr BTHP</li>
+				</ul>
+				<ul>
+						<li>.308</li>
+						<li>WINCHESTER</li>
+						<li>168gr BTHP</li>
+				</ul>
+				<ul>
+						<li>7.62x39mm</li>
+						<li>RUSSIAN</li>
+						<li>154gr JSP</li>
+				</ul>
+				<ul>
+						<li>7.62</li>
+						<li>THUMPER</li>
+						<li>220gr RN</li>
+				</ul>
+				<ul>
+						<li>7.62</li>
+						<li>THUMPER</li>
+						<li>240gr BTHP</li>
+				</ul>
+			</li>
 		</ul>
 	</section>
 	<section>
 		<h3>DISPLAYING (FAMOUS) BLOCKS</h3>
 		<figure>
-		<img src="imgs/abbey-road-trimmed.jpg" alt="The Beatles crossing Abbey Road" height="635" width="960">
+		<img src="imgs/abbey-road-trimmed.jpg" alt="The Beatles crossing Abbey Road" height="635" width="960"><a href="#"><img src="imgs/map.png" alt="Map of Abbey Road" height="130" width="130"></a>
 		</figure>
 		<p>Abbey Road is a thoroughfare located in the borough of Camden and the City of Westminster in London, running roughly northwest to southeast through St. John's Wood, near Lord's Cricket Ground. It is part of the B507. This road is best known for the Abbey Road Studios and the 1969 album, Abbey Road, by The Beatles.</p>
 		<p>Photo:	<a href="goo.gl/h44dc9">goo.gl/h44dc9</a></p>
@@ -87,9 +109,9 @@
 		<h2>Register</h2>
 		<label for="">First Name:<br><input type="text" name="first-name"></label><br>
 		<label for="">Last Name:<br><input type="text" name="last-name"></label><br>
-		<label for="">Email Address:<br><input type="text" name="email"></label><br>
-		<label for="">Date of Birth:<br><input type="text" name="dob"></label><br>
-		<label for="">Phone Number:<br><input type="text" name="phone-number"></label><br>
+		<label for="">Email Address:<br><input type="email" name="email"></label><br>
+		<label for="">Date of Birth:<br><input type="date" name="dob"></label><br>
+		<label for="">Phone Number:<br><input type="tel" name="phone-number"></label><br>
 		<label for="">Home Address:<br><input type="text" name="home-address"></label><br>
 		<input type="checkbox" name="permission" value="permission" checked><label for="">Yes, I would like to be added to your email list.</label>
 		<br>
