--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<p>Volume 3 - September 2013</p>
 	</header>
 	<section>
-		<h4>FEATURE</h4>
-		<h2>POSITIONING<br>RELATIVES</h2>
+		<h2>FEATURE</h2>
+		<h1>POSITIONING<br>RELATIVES</h1>
 		<p>In 1958, English pictorial photographer Henry Peach Robinson created the world's first photomontage by combining five different negatives to make one complete print of a young girl on her deathbed. "Fading Away" - Robinson's first and most famous composite photo - depicts a young girl dying of consumption and was controversial when it was exhibited, with many believing it was not a suitable subject for photography.</p>
 		<figure>
 		<img src="imgs/positioning-relatives.jpg" alt="Black and white photo of a dying girl on a couch with relatives around her" height="493" width="794">
@@ -27,18 +27,18 @@
 		<figure>
 		<img src="imgs/barbie.png" alt="Vintage Barbie doll in a box" height="315" width="354">
 		</figure>
-		<h3>Box Model</h3>
+		<h1>Box Model</h1>
 		<p>The Barbie doll was invented in 1959 by Ruth Handler (co-founder of Mattel), whose own daughter was called Barbara. Barbie was introduced to the world at the American Toy Fair in New York City. Barbie's job was teenage fashion doll. The full name of the first doll was Barbie Millicent Roberts, from Willows, Wisconsin.</p>
 	</section>
 	<section>
-		<h3>Staying Afloat</h3>
+		<h1>Staying Afloat</h1>
 		<p>Lobsterman John Aldridge fell into the shark-infested water of Long Island while his crewmates were asleep. He was kept afloat for more than 12 hours by his rubber boots, which he used as flotation devices. The coast guard rescued him 43 miles south of Montauk where he fell off his vessel.</p>
 		<figure>
 		<img src="imgs/afloat.png" alt="A pair of rubber boots" height="193" width="145">
 		</figure>
 	</section>
 	<section>
-		<h3>LIST STYLES: BULLETS. <span class="font-change">A ROUND-UP OF POPULAR AMMUNITION</span></h3>
+		<h1>LIST STYLES: BULLETS. <span class="font-change">A ROUND-UP OF POPULAR AMMUNITION</span></h1>
 		<figure>
 		<img src="imgs/bullets.png" alt="Photos of assorted bullets" height="276" width="717">
 		</figure>
@@ -73,22 +73,22 @@
 		</ul>
 	</section>
 	<section>
-		<h3>DISPLAYING (FAMOUS) BLOCKS</h3>
+		<h1>DISPLAYING (FAMOUS) BLOCKS</h1>
 		<figure>
 		<img src="imgs/abbey-road-trimmed.jpg" alt="The Beatles crossing Abbey Road" height="635" width="960"><a href="#"><img src="imgs/map.png" alt="Map of Abbey Road" height="130" width="130"></a>
+		<figcaption>Abbey Road is a thoroughfare located in the borough of Camden and the City of Westminster in London, running roughly northwest to southeast through St. John's Wood, near Lord's Cricket Ground. It is part of the B507. This road is best known for the Abbey Road Studios and the 1969 album, Abbey Road, by The Beatles.<br><a href="goo.gl/h44dc9">Photo: goo.gl/h44dc9</a>
+		</figcaption>
 		</figure>
-		<p>Abbey Road is a thoroughfare located in the borough of Camden and the City of Westminster in London, running roughly northwest to southeast through St. John's Wood, near Lord's Cricket Ground. It is part of the B507. This road is best known for the Abbey Road Studios and the 1969 album, Abbey Road, by The Beatles.</p>
-		<p>Photo:	<a href="goo.gl/h44dc9">goo.gl/h44dc9</a></p>
 	</section>
 	<section>
-		<h3>BORDER BOTTOM LINE</h3>
+		<h1>BORDER BOTTOM LINE</h1>
 		<img src="imgs/border-bottom.jpg" alt="Photo of four people of different ethnicities, upside down" width="735" height="304">
-		<p class="emphasis">Awful immigration laws from around the world.</p>
+		<p>Awful immigration laws from around the world.</p>
 		<p><strong>Italy</strong> penalizes illegal immigrants with a fine of &#8364;5,000-10,000 and allows immigration officials to detain them for up to 6 months. &#8226;  <strong>Switzerland</strong> immediately deports all convicted criminals from other countries and potentially even their family members. &#8226;  <strong>Australia</strong> detains all non-citizens without a valid visa. &#8226;  <strong>Japan</strong> is allowed to pay $3,000 to each unemployed Latin American immigrant of Japanese descent and $2,000 to each of that unemployed worker's family members to return to their country of origin. &#8226; The <strong>United Arab Emirates</strong> prohibits foreigners from engaging in any sort of labor union-like activity, resulting in harsh living conditions, 80-hour work weeks, back-breaking manual labor, and below-minimum-wage pay.</p>
 	</section>
 	<section>
 		<img src="imgs/transformers.png" alt="photo of the Transformers DVD" width="298" height="365">
-		<h3>TRANSFORMERS<br><span class="size-change">REVENGE OF THE FALLEN</span></h3>
+		<h1>TRANSFORMERS<br><span class="size-change">REVENGE OF THE FALLEN</span></h1>
 		<p>A noisy, underplotted, and overlong special effects extravaganza that lacks a human touch.</p>
 		<p>ROTTEN TOMATO<br><span class="size-change">RATING</span></p>
 		<p>20%</p>
@@ -106,7 +106,7 @@
 		<p>There was little chance to enjoy that calm. One survivor recalled that a few seconds later it "sounded like the sky was collapsing and the earth was cracking." The equivalent of 280,000 Olympic-sized swimming pools burst through the crumbling dam, taking with it entire towns and as many as 171,000 lives.</p>
 	</section>
 	<form>
-		<h2>Register</h2>
+		<h1>Register</h1>
 		<label for="">First Name:<br><input type="text" name="first-name"></label><br>
 		<label for="">Last Name:<br><input type="text" name="last-name"></label><br>
 		<label for="">Email Address:<br><input type="email" name="email"></label><br>
