part way through layout

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 </head>
 <body>
 	<header>
-		<h1>CSS<br>OFF</h1>
 		<p>Volume 3 - September 2013</p>
 	</header>
+	<article>
+	<h1>CSS<br>OFF</h1>
+	<img src="imgs/header-bkgrnd.gif" alt="purple background color" height="1008" width="583">
 	<section>
 		<h2>FEATURE</h2>
 		<h1>POSITIONING<br>RELATIVES</h1>
@@ -105,6 +107,7 @@
 		<p>Just after 1:00 am, the sky cleared and stars emerged from behind the storm clouds. There was an eerie calm as someone yelled, "The water level is going down! The flood is retreating!"</p>
 		<p>There was little chance to enjoy that calm. One survivor recalled that a few seconds later it "sounded like the sky was collapsing and the earth was cracking." The equivalent of 280,000 Olympic-sized swimming pools burst through the crumbling dam, taking with it entire towns and as many as 171,000 lives.</p>
 	</section>
+	</article>
 	<form>
 		<h1>Register</h1>
 		<label for="">First Name:<br><input type="text" name="first-name"></label><br>
