--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</header>
 	<article>
 	<h1>CSS<br>OFF</h1>
-	<img src="imgs/header-bkgrnd.gif" alt="purple background color" height="1008" width="583">
+	<div class="background"></div>
 	<section>
 		<h2>FEATURE</h2>
 		<h1>POSITIONING<br>RELATIVES</h1>
