finished bullet positioning

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		</figure>
 	</section>
 	<section>
-		<h1>LIST STYLE: BULLETS. <span class="font-change">A ROUND-UP OF POPULAR AMMUNITION</span></h1>
+		<h1><span class="no-change">LIST STYLE: BULLETS.</span> <span class="font-change">A ROUND-UP OF POPULAR AMMUNITION</span></h1>
 		<figure>
 		<img src="imgs/bullets.png" alt="Photos of assorted bullets" height="276" width="717">
 		</figure>
