done with upper half layout

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<h1>POSITIONING<br>RELATIVES</h1>
 		<p>In 1958, English pictorial photographer Henry Peach Robinson created the world's first photomontage by combining five different negatives to make one complete print of a young girl on her deathbed. "Fading Away" - Robinson's first and most famous composite photo - depicts a young girl dying of consumption and was controversial when it was exhibited, with many believing it was not a suitable subject for photography.</p>
 		<figure>
-		<img src="imgs/positioning-relatives.jpg" alt="Black and white photo of a dying girl on a couch with relatives around her" height="493" width="794">
+		<img src="imgs/positioning-relatives.jpg" alt="Black and white photo of a dying girl on a couch with relatives around her" height="493" width="794"><img src="imgs/positioning-relatives-shadow.png" alt="a shadow below the preceding photo">
 		</figure>
 	</section>
 	<section>
