fixed background color in border box

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	</header>
 	<article>
 	<h1>CSS<br>OFF</h1>
-	<div class="background"></div>
+	<div class="header-background"></div>
+	<div class="border-box-background"></div>
 	<section>
 		<h2>FEATURE</h2>
 		<h1>POSITIONING<br>RELATIVES</h1>
