--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Lora:400,700italic,400italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/fonts.css">
+	<link rel="stylesheet" type="text/css" href="css/positioning.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
