--- a/index.html
+++ b/index.html
@@ -97,12 +97,16 @@
 		<p>A noisy, underplotted, and overlong special effects extravaganza that lacks a human touch.</p>
 		<p>ROTTEN TOMATO<br><span class="size-change">RATING</span></p>
 		<p>20%</p>
+		<div><img src="imgs/tomato-bar_360.png" alt="bar showing 20% rating" width="191" height="8"></div>
+		<div class="dashed-border"></div>
 		<ul>
 			<li>WORLD PREMIERE</li>
 			<li>DEN HAAG THEATRE</li>
 			<li>THE NETHERLANDS</li>
 			<li>JUNE 23, 2011</li>
-		</ul><div>
+		</ul>
+	</div>
+	<div class="circle"></div>
 	</section>
 	<section>
 		<img src="imgs/overflow.png" alt="The word overflow floating in water" width="1058" height="407">
