--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,100,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Lora:400,700italic,400italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/fonts.css">
 	<link rel="stylesheet" type="text/css" href="css/positioning.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="stylesheet" type="text/css" href="css/styles-bottom.css">
@@ -95,32 +94,30 @@
 	</section>
 	<section>
 		<img src="imgs/border-bottom.jpg" alt="Photo of four people of different ethnicities, upside down" width="735" height="304">
-		<div><h1>BORDER BOTTOM LINE</h1>
-		<p>Awful immigration laws from around the world.</p>
-		<p><strong>Italy</strong> penalizes illegal immigrants with a fine of &#8364;5,000-10,000<br> and allows immigration officials to detain them for up to 6<br> months. &#8226;  <strong>Switzerland</strong> immediately deports all convicted<br> criminals from other countries and potentially even their family<br> members. &#8226;  <strong>Australia</strong> detains all non-citizens without a valid<br> visa. &#8226;  <strong>Japan</strong> is allowed to pay $3,000 to each unemployed Latin<br> American immigrant of Japanese descent and $2,000 to each of<br> that unemployed worker's family members to return to their<br> country of origin. &#8226; The <strong>United Arab Emirates</strong> prohibits<br> foreigners from engaging in any sort of labor union-like activity,<br> resulting in harsh living conditions, 80-hour work weeks,<br> back-breaking manual labor, and below-minimum-wage pay.</p><div>
+		<h1>BORDER BOTTOM LINE</h1>
+		<h2>Awful immigration laws from around the world.</h2>
+		<p><strong>Italy</strong> penalizes illegal immigrants with a fine of &#8364;5,000-10,000<br> and allows immigration officials to detain them for up to 6<br> months. &#8226;  <strong>Switzerland</strong> immediately deports all convicted<br> criminals from other countries and potentially even their family<br> members. &#8226;  <strong>Australia</strong> detains all non-citizens without a valid<br> visa. &#8226;  <strong>Japan</strong> is allowed to pay $3,000 to each unemployed Latin<br> American immigrant of Japanese descent and $2,000 to each of<br> that unemployed worker's family members to return to their<br> country of origin. &#8226; The <strong>United Arab Emirates</strong> prohibits<br> foreigners from engaging in any sort of labor union-like activity,<br> resulting in harsh living conditions, 80-hour work weeks,<br> back-breaking manual labor, and below-minimum-wage pay.</p>
 	</section>
 	<section>
 		<img src="imgs/transformers.png" alt="photo of the Transformers DVD" width="298" height="365">
-		<div><h1>TRANSFORMERS<br><span class="size-change">REVENGE OF THE FALLEN</span></h1>
+		<h1>TRANSFORMERS<br><span class="size-change">REVENGE OF THE FALLEN</span></h1>
 		<p>A noisy, underplotted, and overlong special effects extravaganza that lacks a human touch.</p>
-		<p>ROTTEN TOMATO<br><span class="size-change">RATING</span></p>
-		<p>20%</p>
-		<div><img src="imgs/tomato-bar_360.png" alt="bar showing 20% rating" width="191" height="8"></div>
+		<p>ROTTEN TOMATO<br><span class="size-change">RATING</span><span class="line-spanner">20%</span></p>
+		<img src="imgs/tomato-bar_360.png" alt="percentage bar showing 20% rating" width="191" height="8">
 		<div class="dashed-border"></div>
-		<ul>
-			<li>WORLD PREMIERE</li>
-			<li>DEN HAAG THEATRE</li>
-			<li>THE NETHERLANDS</li>
-			<li>JUNE 23, 2011</li>
-		</ul>
-	</div>
-	<div class="circle"></div>
+			<ul>
+				<li>WORLD PREMIERE</li>
+				<li>DEN HAAG THEATRE</li>
+				<li>THE NETHERLANDS</li>
+				<li>JUNE 23, 2011</li>
+			</ul>
+		<div class="circle"></div>
 	</section>
 	<section>
 		<img src="imgs/overflow.png" alt="The word overflow floating in water" width="1058" height="407">
-		<div><p>On the night of Aug 8, 1975, a line of people frantically piled sandbags atop Henan Province's <strong>Banqiao</strong><br> <strong>Dam</strong> while being battered by the worst storm ever recorded in the region. They were in a race with<br> the rapidly rising Ru River to save the dam and the millions of people that lay sleeping downstream.<br> It was a race they were about to lose</p>
+		<p>On the night of Aug 8, 1975, a line of people frantically piled sandbags atop Henan Province's <strong>Banqiao</strong><br> <strong>Dam</strong> while being battered by the worst storm ever recorded in the region. They were in a race with<br> the rapidly rising Ru River to save the dam and the millions of people that lay sleeping downstream.<br> It was a race they were about to lose</p>
 		<p>Just after 1:00 am, the sky cleared and stars emerged from behind the storm clouds. There was an<br>eerie calm as someone yelled, "The water level is going down! The flood is retreating!"</p>
-		<p>There was little chance to enjoy that calm. One survivor recalled that a few seconds later it "sounded<br> like the sky was collapsing and the earth was cracking." The equivalent of 280,000 Olympic-sized<br> swimming pools burst through the crumbling dam, taking with it entire towns and as many as<br> 171,000 lives.</p><div>
+		<p>There was little chance to enjoy that calm. One survivor recalled that a few seconds later it "sounded<br> like the sky was collapsing and the earth was cracking." The equivalent of 280,000 Olympic-sized<br> swimming pools burst through the crumbling dam, taking with it entire towns and as many as<br> 171,000 lives.</p>
 	</section>
 	</article>
 	<form>
